minor css fix to remove flexWrap from section class

--- a/src/pages/pages.module.scss
+++ b/src/pages/pages.module.scss
@@ -32,7 +32,7 @@
 }
 
 @media (max-width: 400px) {
-  .section {
+  .sectionBlog {
     flex-wrap: wrap;
   }
   .section h3 {
